package com.tp1_techno_web.serietemporelle.model;

public enum  Right {
    OWNER,
    READER,
    EDITOR
}
