@startuml
title 'Diagramme de classes'

package model #DDFFDD {
  class Event {
  + eventId : long
  + date : Date
  + value: double
  + comment: String
  + Arraylist<Tag> tags
  + createdAt : Date
  + updatedAt : Date
  --

  }

  class TimeSerie {
  + serieId: long
  + listEvents: Arraylist
  + title: String
  + description: String
  + owner: long
  + createdAt : Date
  + updatedAt : Date
  --
  }

  class User {
  + userId: long
  + username: String
  --
  }

  class Tag {
  + name: String
  }

  class SharedSerie {
   + long sharedSerieId
   + User grantedUser
   + Right permission
  }

  enum Right {
    OWNER
    READER
    EDITOR
  }
}

package service #DD0623 {
  class EventService {
  + Arraylist<Event> eventService
  --
  - Object getAllEvent(HttpServletRequest header)
  - Event getEventById(long eventId)
  - List<Event> createEvents(Event event)
  - List<Event> updateEvent(Event event_u, long eventId)
  - Map<String,String> deleteEvent(long eventId)
  - ArrayList<Event> findAllEvent()
  - Event findEventById(long eventId)
  - Event findEventValue(int value)
  }

  class TimeSerieService {
  + Arraylist<TimeSerie> timeSerieService
  --
  + void addEvent(Event event)
  + void updateEvent(Event event)
  + void deleteEvent(Event event)
  }

  class UserService {
  + userId: long
  + name: String
  --
  + TimeSerie createSerie()
  + TimeSerie deleteSerie(long serieId)
  + void updateSerieTitle(long serieId, String newTitle)
  + void updateSerieDescription(long serieId, String newDescription)
  + void addEventToSerie(Event event, TimeSerie serie)
  + void deleteEventFromSerie(Event event, TimeSerie serie)
  + void updateEventFromSerie(Event event, TimeSerie serie)
  + void addEditor(long userId)
  + void addReader(long userId)
  + void deleteEditor(long userId)
  + void deleteReader(long userId)
  }

  class TagService {
  + name: String
  }

  class SharedSerieService {
     + Arraylist<SharedSerie> sharedSerieService
     --
    }
}

TimeSerie -right- "*" Event
User -up-> TimeSerie : instanciate
Event -- "*" Tag

EventService -down- "*" Event
TimeSerieService -down- "*" TimeSerie
SharedSerie -- "1" TimeSerie
SharedSerieService -- "*" SharedSerie
@enduml